--- a/PzProject/View/UserPage.xaml
+++ b/PzProject/View/UserPage.xaml
@@ -17,6 +17,9 @@
 
         <TextBlock Text="Panel Administracyjny" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"
                    Grid.Row="0"/>
+        <Button Content="Powrot" Margin="5" Width="100"
+                VerticalAlignment="Center" HorizontalAlignment="Right"
+                Command="{Binding PreviousPageCommand}"/>
         
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
