--- a/PzProject/View/LoginPage.xaml
+++ b/PzProject/View/LoginPage.xaml
@@ -9,18 +9,25 @@
       Title="LoginPage">
 
     <Grid Background="LightGray">
-        <StackPanel Background="#efe" Margin="10">
-            <TextBlock Text="Logowanie: " FontSize="16" FontWeight="Bold"
+        <StackPanel Background="#B6CDBD" Margin="10">
+            <TextBlock Text="Logowanie: " 
+                       FontSize="16" 
+                       FontWeight="Bold"
+                       Foreground="#475849"
                        HorizontalAlignment="Center"
                        Margin="10"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="Login:"/>
+                <TextBlock Text="Login:"
+                           FontWeight="Bold"
+                           Foreground="#475849"/>
                 <TextBox Text="{Binding Path=Login}" Width="200"
                          Margin="10 0 10 0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0 10 0 0">
-                <TextBlock Text="Haslo:"/>
+                <TextBlock Text="Haslo:" 
+                           FontWeight="Bold" 
+                           Foreground="#475849"/>
                 <PasswordBox Width="200" Margin="10 0 10 0"
                              Name="PasswordBox"/>
             </StackPanel>
