--- a/PzProject/View/RoomPage.xaml
+++ b/PzProject/View/RoomPage.xaml
@@ -7,47 +7,54 @@
       d:DesignHeight="360" d:DesignWidth="1000"
       Title="RoomPage">
 
-    <Grid Background="LightGray">
+    <Grid Background="#B6CDBD">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <TextBlock Text="Wybór miejsca"
-                   FontSize="20"
-                   FontWeight="Bold"
+                   FontSize="28"
+                   FontWeight="Bold" 
+                   Foreground="#475849"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
-                   Grid.Row="0" />
+                   Grid.Row="0" Height="35" Margin="403,-2,359,0" Width="238" />
 
         <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="458*"/>
+                <ColumnDefinition Width="50*"/>
+                <ColumnDefinition Width="81*"/>
+                <ColumnDefinition Width="411*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.1*"/>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="0.2*" />
             </Grid.RowDefinitions>
-            
+
             <TextBlock Grid.Row="0"
                        HorizontalAlignment="Center"
                        FontWeight="Bold"
                        FontSize="30"
-                       Text="{Binding Path=Seance.Movie.Name}"/>
+                       Text="{Binding Path=Seance.Movie.Name}" Margin="42.373,0,8,0" Grid.Column="1"/>
 
 
-            <Border Grid.Row="1" Background="#fdc" BorderBrush="Gainsboro" BorderThickness="1">
+            <Border Grid.Row="1" Background="#F2F9F1" BorderBrush="Gainsboro" BorderThickness="1" Grid.ColumnSpan="4">
                 <ContentPresenter Margin="10"
                                   HorizontalAlignment="Center"
                                   Content="{Binding Path=Grid, Mode=TwoWay}" />
             </Border>
 
 
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="2" Grid.ColumnSpan="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="0.4*" />
                 </Grid.ColumnDefinitions>
-            
+
                 <Button Grid.Column="0"
                         Content="Rezerwuj"
                         FontSize="19"
