--- a/PzProject/View/UserPage.xaml
+++ b/PzProject/View/UserPage.xaml
@@ -8,48 +8,57 @@
       d:DesignHeight="360" d:DesignWidth="1000"
       Title="UserPage">
 
-    <Grid Background="LightGray">
+    <Grid Background="#B6CDBD">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Panel Administracyjny" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"
+        <TextBlock Text="Panel Administracyjny" 
+                   FontSize="22" 
+                   FontWeight="Bold" 
+                   Foreground="#475849" 
+                   HorizontalAlignment="Center"
                    Grid.Row="0"/>
         <Button Content="Powrot" Margin="5" Width="100"
                 VerticalAlignment="Center" HorizontalAlignment="Right"
                 Command="{Binding PreviousPageCommand}"/>
-        
+
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="0.5*"/>
             </Grid.ColumnDefinitions>
-            
+
             <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="573*"/>
+                    <ColumnDefinition Width="94*"/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.1*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                            Grid.Row="0">
+                            Grid.Row="0" Margin="105,0,10.53,0">
                     <TextBlock Text="Szukaj: " FontSize="16" FontWeight="Bold"
                                VerticalAlignment="Center"/>
                     <TextBox Text="{Binding Path=Search, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                              Width="400" Height="20"/>
                 </StackPanel>
-                
-                <ListView Grid.Row="1" Margin="10" 
-                          ItemsSource="{Binding FilteredBookList}"/>
 
+                <ListView Grid.Row="1" 
+                          Margin="10" 
+                          Background="#F2F9F1"
+                          ItemsSource="{Binding FilteredBookList}" Grid.ColumnSpan="2"/>
             </Grid>
-            
-            <Grid Grid.Column="1" Background="White" Margin="10">
-                
+                <Grid Grid.Column="1" 
+                      Background="#F2F9F1" 
+                      Margin="10">
             </Grid>
-            
+
         </Grid>
     </Grid>
 </Page>
