--- a/PzProject/View/RoomPage.xaml
+++ b/PzProject/View/RoomPage.xaml
@@ -30,10 +30,9 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="458*"/>
-                <ColumnDefinition Width="50*"/>
-                <ColumnDefinition Width="81*"/>
-                <ColumnDefinition Width="411*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.1*"/>
@@ -45,17 +44,19 @@
                        HorizontalAlignment="Center"
                        FontWeight="Bold"
                        FontSize="30"
-                       Text="{Binding Path=Seance.Movie.Name}" Margin="42.373,0,8,0" Grid.Column="1"/>
+                       Text="{Binding Path=Seance.Movie.Name}" 
+                       Grid.Column="0"                       
+                       Grid.ColumnSpan="1"/>
 
 
-            <Border Grid.Row="1" Background="#F2F9F1" BorderBrush="Gainsboro" BorderThickness="1" Grid.ColumnSpan="4">
+            <Border Grid.Row="1" Background="#F2F9F1" BorderBrush="Gainsboro" BorderThickness="1" Grid.ColumnSpan="5">
                 <ContentPresenter Margin="10"
                                   HorizontalAlignment="Center"
                                   Content="{Binding Path=Grid, Mode=TwoWay}" />
             </Border>
 
 
-            <Grid Grid.Row="2" Grid.ColumnSpan="4">
+            <Grid Grid.Row="2" Grid.ColumnSpan="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*" />
