--- a/PzProject/View/UserPage.xaml
+++ b/PzProject/View/UserPage.xaml
@@ -20,36 +20,55 @@
         <Button Content="Powrot" Margin="5" Width="100"
                 VerticalAlignment="Center" HorizontalAlignment="Right"
                 Command="{Binding PreviousPageCommand}"/>
-        
+
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="0.5*"/>
             </Grid.ColumnDefinitions>
-            
+
             <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="237*"/>
+                    <ColumnDefinition Width="13*"/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.1*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                            Grid.Row="0">
+                            Grid.Row="0" Margin="272,0,220,0">
                     <TextBlock Text="Szukaj: " FontSize="16" FontWeight="Bold"
                                VerticalAlignment="Center"/>
                     <TextBox Text="{Binding Path=Search, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                              Width="400" Height="20"/>
                 </StackPanel>
-                
-                <ListView Grid.Row="1" Margin="10" 
-                          ItemsSource="{Binding FilteredBookList}"/>
+
+                <DataGrid Grid.Row="1" Margin="10" 
+                          ItemsSource="{Binding FilteredBookingList}"
+                          AutoGenerateColumns="False" CanUserAddRows="False" Grid.ColumnSpan="2"
+                          SelectedItem="{Binding SelectedBooking}">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding Imie}" Header="Imie" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding Nazwisko}" Header="Nazwisko" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding Email}" Header="Email" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding Telefon}" Header="Telefon" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding ULGA.Nazwa}" Header="Ulga" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding GODZINY.SEANS.Nazwa_filmu}" Header="Film" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding GODZINY.Godzina}" Header="Godzina" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding Miejsce}" Header="Nr miejsca" IsReadOnly="True"/>
+                        <DataGridTextColumn Binding="{Binding GODZINY.SEANS.SALA.Id_sala}" Header="Nr sali" IsReadOnly="True"/>
+                        <DataGridCheckBoxColumn Binding="{Binding Potwierdzenie}" Header="Potwierdzenie"/>
+                        <DataGridCheckBoxColumn Binding="{Binding Realizacja}" Header="Realizacja"/>
+                    </DataGrid.Columns>
+
+                </DataGrid>
 
             </Grid>
-            
-            <Grid Grid.Column="1" Background="White" Margin="10">
-                
-            </Grid>
-            
         </Grid>
+        <Button Grid.Row="2" Margin="5" Width="150"
+                HorizontalAlignment="Right" Content="Usun rezerwacje"
+                Command="{Binding RemoveCommand}"/>
     </Grid>
 </Page>
